--- a/k8s/mosquitto.yaml
+++ b/k8s/mosquitto.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "mosquitto-service"
+  name: mosquitto-service
+  namespace: mqtt
 spec:
   type: ClusterIP
   ports:
@@ -10,24 +11,25 @@ spec:
       targetPort: 1883
       protocol: TCP
   selector:
-    app: "mosquitto"
+    app: mosquitto
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "mosquitto-deployment"
+  name: mosquitto-deployment
+  namespace: mqtt
 spec:
   selector:
     matchLabels:
-      app: "mosquitto"
+      app: mosquitto
   replicas: 1
   template:
     metadata:
       labels:
-        app: "mosquitto"
+        app: mosquitto
     spec:
       containers:
-        - name: "mosquitto"
+        - name: mosquitto
           image: eclipse-mosquitto:1.6.12
           imagePullPolicy: IfNotPresent
           ports:
